# SecondBrain

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  com.secondbrain.api.plist  com.secondbrain.daily-sync.plist  com.secondbrain.ui.plist  pyproject.toml
.claude/: settings.local.json
.githooks/: pre-push
.github/workflows/: ci-failure-auto-fix.yml  ci.yml  pr-review.yml  test-failure-analysis.yml
docs/: API_SPEC.md  DATA_MODEL.md  ENGINEERING_REVIEW.md  INDEXING_PIPELINE.md  OPERATIONS_OBSERVABILITY.md  PRD.md  ROADMAP.md  SECURITY_PRIVACY.md  SOLUTION_ARCHITECTURE.md  UI_DESIGN_SPEC.md  windsurf-global-workflows.md
docs/features/: AGENT-PROMPT-llm-observability.md  COORD-server-perf-and-always-on.md  DEFERRED-task-lifecycle.md  EXPLORATION-calendar-integration.md  EXPLORATION-email-ingestion.md  PROMPT-always-on-reliability.md  PROMPT-configurable-categories-ui.md  PROMPT-email-ingestion.md  PROMPT-fix-tasks-lost-on-existing-note-append.md  PROMPT-hash-mismatch-bugfix-round2.md  PROMPT-insights-dashboard.md  PROMPT-link-retrieval-and-capture-connections.md  PROMPT-llm-observability-tracing.md  PROMPT-personal-task-subcategories.md  PROMPT-public-demo-instance.md  PROMPT-retroactive-task-recategorization.md  calendar-events.md  (+23 more)
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
tests/: __init__.py  conftest.py  test_admin_api.py  test_answerer_links.py  test_answerer_tracing.py  test_api_latency.py  test_briefing.py  test_briefing_api.py  test_capture_api.py  test_chunker.py  test_daily_sync.py  test_event_parser.py  test_events_api.py  test_extractor.py  test_health.py  test_hybrid_rrf.py  test_inbox_processor.py  test_index_tracker.py  test_link_expander.py  test_links.py  test_llm_client.py  test_main.py  test_metadata_api.py  test_metadata_store.py  test_operational_hardening.py  test_parser.py  test_project_sync.py  test_reranker_logic.py  test_settings.py  test_stores.py  test_suggestions.py  test_task_aggregator.py  test_tasks_api.py  test_usage_store.py  test_weekly_review.py
(+155 files in other folders)
